created a sandbox. json file with config

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
     <h1 class="text-center">Khensani Ngobeni</h1>
-    <h3 class="text-center">Front-end developer, based in [YOUR LOCATION]</h3>
+    <h3 class="text-center">Front-end developer, based in South Africa 🇿🇦</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
