--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front End Developer - Khensani Ngobeni</title>
+    <meta
+      name="description"
+      content="Welcome to Khensani Ngobeni's Portfolio website. This website's purpose is to show the progress this young software developer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,10 +41,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="Learn More about me! - Khensani Ngobeni">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="Contact Me section - Khensani Ngobeni">Contact me</a>
             </li>
           </ul>
         </div>
@@ -51,13 +54,13 @@
     <h1 class="text-center">Khensani Ngobeni</h1>
     <h3 class="text-center">🇿🇦 Front-end developer, based in Africa</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="about.html#contact" class="primary-link" title="Contact Me Section - Khensani Ngobeni">Contact me</a>
+      <a href="about.html" class="secondary-link" title="Learn More about me! - Khensani Ngobeni"">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/yoga.png" alt="This is an image of a person doing a yoga pose" class="img-fluid rounded .d-none .d-sm-block" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -68,7 +71,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Learn more about yoga!">Launch Yoga App</a>
           </div>
         </div>
       </div>
@@ -82,16 +85,16 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Learn more about our weather app">Launch Weather App</a>
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/weather.png" alt="Image of a weather application" class="img-fluid rounded .d-none .d-sm-block" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="images/yogurt.png" alt="Image of a website dedicated to yogurt" class="img-fluid rounded .d-none .d-sm-block" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -102,7 +105,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link">Launch Yogurt App</a>
           </div>
         </div>
       </div>
