--- a/about.html
+++ b/about.html
@@ -14,12 +14,19 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About Khensani Ngobeni</title>
+    <title>About Page | Khensani Ngobeni</title>
+    <meta
+      name="description"
+      content="This is the about page of Khensani
+    Ngobeni, a young aspriring software developer" />
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Khensani Ngobeni</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Khensani Ngobeni</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -33,20 +40,38 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="About page of Khensani Ngobeni"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact section for Khensani Ngobeni"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from Johannesburg, South Africa</h3>
+    <h3 class="text-center">
+      Front-end developer from Johannesburg, South Africa
+    </h3>
     <div class="about-paragraphs text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -58,19 +83,30 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yoga.png"
+            alt="Image of woman doing a yoga pose"
+            class="img-fluid p-2 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/weather.png"
+            alt="Image of weather application"
+            class="img-fluid p-2 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="Image of webiste dedicated to yogurt"
+            class="img-fluid p-2 shadow rounded" />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:khensi.ngobeni@gmail.com" class="email-link">khensi.ngobeni@gmail.com</a>
+      <a href="mailto:khensi.ngobeni@gmail.com" class="email-link"
+        >khensi.ngobeni@gmail.com</a
+      >
     </div>
   </body>
 </html>
